refactor, use getConstructor() as it's deprecated